plugins {
	id 'org.springframework.boot' version '2.2.5.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'war'
}

group = 'com.oidc'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	
	//Nimbus oidc client
	implementation 'com.nimbusds:oauth2-oidc-sdk:7.3'
	//JSON
	compile ('com.fasterxml.jackson.core:jackson-databind:2.9.8')
	// https://mvnrepository.com/artifact/org.webjars/bootstrap
	//compile group: 'org.webjars', name: 'bootstrap', version: '4.4.1'
	// https://mvnrepository.com/artifact/org.webjars/jquery
	//compile group: 'org.webjars', name: 'jquery', version: '3.4.1'
	// https://mvnrepository.com/artifact/org.webjars/bootstrap-datepicker
	//compile group: 'org.webjars', name: 'bootstrap-datepicker', version: '1.9.0'
	
	
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}

bootRun {
   systemProperties = System.properties
}
